--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>CodedEleganceZm</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FDXL1HWJ9W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FDXL1HWJ9W');
+</script>
 <body>
     <header>
         <!-- Navigation goes here -->
