--- a/index.html
+++ b/index.html
@@ -1,36 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>CodedEleganceZm</title>
- <link rel="stylesheet" href="styles.css">
- <!-- Google tag (gtag.js) -->
- <script async src="https://www.googletagmanager.com/gtag/js?id=G-FDXL1HWJ9W"></script>
- <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+ <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CodedEleganceZm</title>
+  <link rel="stylesheet" href="styles.css">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FDXL1HWJ9W"></script>
+  <script>
+   window.dataLayer = window.dataLayer || [];
+   function gtag(){dataLayer.push(arguments);}
+   gtag('js', new Date());
 
-  gtag('config', 'G-FDXL1HWJ9W');
- </script>
-</head>
-<body>
-    <header>
-        <!-- Navigation goes here -->
-        <nav aria-label="breadcrumb">
-         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="#">Home</a></li>
-          <li class="breadcrumb-item"><a href="#">Category</a></li>
-          <li class="breadcrumb-item active" aria-current="page">Subcategory</li>
-         </ol>
-     </nav>
-    </header>
-    <main>
-        <!-- Main content goes here -->
-    </main>
-    <footer>
-        <!-- Footer content goes here -->
-    </footer>
-</body>
+   gtag('config', 'G-FDXL1HWJ9W');
+  </script>
+ </head>
+ <body>
+  <header>
+   <!-- Navigation goes here -->
+   <nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+     <li class="breadcrumb-item"><a href="#">Home</a></li>
+     <li class="breadcrumb-item"><a href="#">Catalogue</a></li>
+     <li class="breadcrumb-item active" aria-current="page">Blog</li>
+    </ol>
+   </nav>
+  </header>
+  <main>
+   <!-- Main content goes here -->
+   ✨️ Coded Elegance ✨️ 
+   Modern essentials to navigate your world with confidence, style and unmistakable elegance
+   🚚 🛍 Free delivery to 
+  📍Zcas, Unza, Evelyn Hone, Kamwala and Chalala Mall, Lewanika, Levy, Pinnacle Novare, Centro, Crossroads & Leopards Hill Malls. 
+  📌Yango & Platinum Delivery Also Available. 
+  </main>
+  <footer>
+   <!-- Footer content goes here -->
+   📞📩 0972123641 Call / Text / WhatsApp
+  </footer>
+ </body>
 </html>
