--- a/index.html
+++ b/index.html
@@ -16,11 +16,16 @@
   </script>
  </head>
  <body>
-  ✨️ Coded Elegance ✨️ </br></br>
-  Modern essentials to navigate your world with confidence, style and unmistakable elegance </br></br>
-  🚚 🛍 Free delivery to </br></br>
- 📍Zcas, Unza, Evelyn Hone, Kamwala and Chalala Mall, Lewanika, Levy, Pinnacle Novare, Centro, Crossroads & Leopards Hill Malls. </br></br>
- 📌Yango & Platinum Delivery Also Available. </br></br>
+  ✨️ Coded Elegance ✨️ 
+  </br>
+  Modern essentials to navigate your world with confidence, style and unmistakable elegance 
+  </br>
+  🚚 🛍 Free delivery to 
+  </br>
+ 📍Zcas, Unza, Evelyn Hone, Kamwala and Chalala Mall, Lewanika, Levy, Pinnacle Novare, Centro, Crossroads & Leopards Hill Malls. 
+  </br>
+ 📌Yango & Platinum Delivery Also Available. 
+ </br>
  📞📩 0972123641 Call / Text / WhatsApp
  </body>
 </html>
